--- a/PortFolion/PortFolionCore/PortFolionCore.csproj
+++ b/PortFolion/PortFolionCore/PortFolionCore.csproj
@@ -48,13 +48,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommonNode.cs" />
+    <Compile Include="CompensatedTimeLine.cs" />
+    <Compile Include="IO\CushionNode.cs" />
+    <Compile Include="TreeStructure\Leafs.cs" />
+    <Compile Include="TreeStructure\Nodes.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TagInfo.cs" />
+    <Compile Include="TreeStructure\RootCollection.cs" />
+    <Compile Include="TreeStructure\TagInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
