--- a/PortFolion/PortFolionCore/PortFolionCore.csproj
+++ b/PortFolion/PortFolionCore/PortFolionCore.csproj
@@ -48,11 +48,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompensatedTimeLine.cs" />
+    <Compile Include="GraphModel\Breakdown.cs" />
+    <Compile Include="GraphModel\Ratios.cs" />
+    <Compile Include="GraphModel\Utility.cs" />
+    <Compile Include="GraphModel\TransitionData.cs" />
+    <Compile Include="IO\InputOutput.cs" />
     <Compile Include="IO\CushionNode.cs" />
     <Compile Include="TreeStructure\Leafs.cs" />
     <Compile Include="TreeStructure\Nodes.cs" />
-    <Compile Include="Period.cs" />
+    <Compile Include="GraphModel\Enum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeStructure\RootCollection.cs" />
     <Compile Include="TreeStructure\TagInfo.cs" />
