--- a/PortFolion/PortFolion/packages.config
+++ b/PortFolion/PortFolion/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="Houzkin" version="1.0.7" targetFramework="net452" />
   <package id="Houzkin.Tree" version="1.0.8" targetFramework="net452" />
+  <package id="LiveCharts" version="0.8.1.1" targetFramework="net452" />
+  <package id="LiveCharts.Wpf" version="0.8.1.1" targetFramework="net452" />
+  <package id="ModernUI.WPF" version="1.0.9" targetFramework="net452" />
 </packages>
