--- a/PortFolion/PortFolion/packages.config
+++ b/PortFolion/PortFolion/packages.config
@@ -4,5 +4,5 @@
   <package id="Houzkin.Tree" version="1.0.8" targetFramework="net452" />
   <package id="LiveCharts" version="0.8.1.1" targetFramework="net452" />
   <package id="LiveCharts.Wpf" version="0.8.1.1" targetFramework="net452" />
-  <package id="ModernUI.WPF" version="1.0.9" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.4.1" targetFramework="net452" />
 </packages>
