--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -34,6 +34,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>
+    </ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Houzkin.Tree, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Houzkin.Tree.1.0.8\lib\Houzkin.Tree.dll</HintPath>
@@ -83,9 +87,23 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\MenuVM.cs" />
+    <Compile Include="Views\GraphContents.xaml.cs">
+      <DependentUpon>GraphContents.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GraphTab.xaml.cs">
+      <DependentUpon>GraphTab.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\ModernMainWindow.xaml.cs">
       <DependentUpon>ModernMainWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\GraphContents.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GraphTab.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -137,6 +155,7 @@
     <Content Include="InfrastructureAssemblies\Livet.XML" />
     <Content Include="InfrastructureAssemblies\Microsoft.Expression.Interactions.dll" />
     <Content Include="InfrastructureAssemblies\System.Windows.Interactivity.dll" />
+    <Resource Include="PortFolion.ico" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PortFolionCore\PortFolionCore.csproj">
