--- a/PortFolion/PortFolionCore/PortFolionCore.csproj
+++ b/PortFolion/PortFolionCore/PortFolionCore.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=8c4959082be5c823, processorArchitecture=MSIL">
+      <HintPath>..\packages\CsvHelper.2.16.3.0\lib\net45\CsvHelper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Houzkin, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Houzkin.1.0.7\lib\Houzkin.dll</HintPath>
       <Private>True</Private>
@@ -52,6 +56,7 @@
     <Compile Include="GraphModel\Ratios.cs" />
     <Compile Include="GraphModel\Utility.cs" />
     <Compile Include="GraphModel\TransitionData.cs" />
+    <Compile Include="IO\CacheManager.cs" />
     <Compile Include="IO\HistoryIO.cs" />
     <Compile Include="IO\CushionNode.cs" />
     <Compile Include="TreeStructure\Leafs.cs" />
@@ -60,13 +65,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TreeStructure\RootCollection.cs" />
     <Compile Include="TreeStructure\TagInfo.cs" />
+    <Compile Include="Web\Kdb.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Log\" />
-    <Folder Include="Web\" />
+    <Folder Include="Status\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
