--- a/PortFolion/PortFolionCore/PortFolionCore.csproj
+++ b/PortFolion/PortFolionCore/PortFolionCore.csproj
@@ -52,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\StockInfo.cs" />
     <Compile Include="GraphModel\Breakdown.cs" />
     <Compile Include="GraphModel\Ratios.cs" />
     <Compile Include="GraphModel\Utility.cs" />
@@ -59,12 +60,12 @@
     <Compile Include="IO\CacheManager.cs" />
     <Compile Include="IO\HistoryIO.cs" />
     <Compile Include="IO\CushionNode.cs" />
-    <Compile Include="TreeStructure\Leafs.cs" />
-    <Compile Include="TreeStructure\Nodes.cs" />
+    <Compile Include="Data\TreeStructure\Leafs.cs" />
+    <Compile Include="Data\TreeStructure\Nodes.cs" />
     <Compile Include="GraphModel\Enum.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TreeStructure\RootCollection.cs" />
-    <Compile Include="TreeStructure\TagInfo.cs" />
+    <Compile Include="Data\TreeStructure\RootCollection.cs" />
+    <Compile Include="Data\TreeStructure\TagInfo.cs" />
     <Compile Include="Web\Kdb.cs" />
   </ItemGroup>
   <ItemGroup>
