--- a/PortFolion/PortFolion/packages.config
+++ b/PortFolion/PortFolion/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Houzkin" version="1.0.7" targetFramework="net452" />
+  <package id="Houzkin.Architecture" version="1.0.5" targetFramework="net452" />
   <package id="Houzkin.Tree" version="1.0.8" targetFramework="net452" />
-  <package id="LiveCharts" version="0.8.1.1" targetFramework="net452" />
-  <package id="LiveCharts.Wpf" version="0.8.1.1" targetFramework="net452" />
+  <package id="LiveCharts" version="0.9.0" targetFramework="net452" />
+  <package id="LiveCharts.Wpf" version="0.9.0" targetFramework="net452" />
+  <package id="LivetCask" version="1.3.1.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.1" targetFramework="net452" />
 </packages>
