--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -94,7 +94,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="ViewModels\CommonNodeVM.cs" />
+    <Compile Include="ViewModels\TreeLeafVM.cs" />
+    <Compile Include="ViewModels\TreeNodeVM.cs" />
     <Compile Include="Views\GraphContents.xaml.cs">
       <DependentUpon>GraphContents.xaml</DependentUpon>
     </Compile>
