--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -102,6 +102,7 @@
     <Compile Include="ViewModels\EditNode.cs" />
     <Compile Include="ViewModels\TreeLeafVM.cs" />
     <Compile Include="ViewModels\TreeNodeVM.cs" />
+    <Compile Include="Views\Converter\PathToStringConverter.cs" />
     <Compile Include="Views\GraphContents.xaml.cs">
       <DependentUpon>GraphContents.xaml</DependentUpon>
     </Compile>
