--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -99,7 +99,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ViewModels\ListViewModelMain.cs" />
-    <Compile Include="ViewModels\EditNode.cs" />
+    <Compile Include="ViewModels\NodeNameEdit.cs" />
     <Compile Include="ViewModels\TreeLeafVM.cs" />
     <Compile Include="ViewModels\TreeNodeVM.cs" />
     <Compile Include="Views\Converter\PathToStringConverter.cs" />
