--- a/PortFolion/PortFolion/packages.config
+++ b/PortFolion/PortFolion/packages.config
@@ -7,4 +7,5 @@
   <package id="LiveCharts.Wpf" version="0.9.0" targetFramework="net452" />
   <package id="LivetCask" version="1.3.1.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.1" targetFramework="net452" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net452" />
 </packages>
