--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -134,6 +134,9 @@
     <Compile Include="ViewModels\LocationTree.cs" />
     <Compile Include="ViewModels\MenuItemViewModel.cs" />
     <Compile Include="Views\Converter\PeriodToStringConverter.cs" />
+    <Compile Include="Views\GraphBullets.xaml.cs">
+      <DependentUpon>GraphBullets.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\PieChartCustomLegend.xaml.cs">
       <DependentUpon>PieChartCustomLegend.xaml</DependentUpon>
     </Compile>
@@ -152,8 +155,13 @@
     <Compile Include="EditComponent\NodeNameEditWindow.xaml.cs">
       <DependentUpon>NodeNameEditWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Selector\GraphSelector.cs" />
     <Compile Include="Views\Selector\Selectors.cs" />
     <Page Include="EditComponent\AccountEditWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GraphBullets.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
