--- a/PortFolion/PortFolion/PortFolion.csproj
+++ b/PortFolion/PortFolion/PortFolion.csproj
@@ -119,7 +119,6 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="EditComponent\TNodeVm.cs" />
-    <Compile Include="ViewModels\GraphViewModel.cs" />
     <Compile Include="ViewModels\DateTree.cs" />
     <Compile Include="EditComponent\ListViewModelMain.cs" />
     <Compile Include="EditComponent\AccountEditVM.cs" />
@@ -129,21 +128,21 @@
     <Compile Include="EditComponent\AccountEditWindow.xaml.cs">
       <DependentUpon>AccountEditWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\GraphVm.cs" />
-    <Compile Include="ViewModels\GraphVmUtil.cs" />
+    <Compile Include="GraphComponent\GraphVm.cs" />
+    <Compile Include="GraphComponent\GraphVmUtil.cs" />
     <Compile Include="ViewModels\LocationTree.cs" />
     <Compile Include="ViewModels\MenuItemViewModel.cs" />
     <Compile Include="Views\Converter\PeriodToStringConverter.cs" />
-    <Compile Include="Views\GraphBullets.xaml.cs">
+    <Compile Include="GraphComponent\GraphBullets.xaml.cs">
       <DependentUpon>GraphBullets.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\PieChartCustomLegend.xaml.cs">
+    <Compile Include="GraphComponent\PieChartCustomLegend.xaml.cs">
       <DependentUpon>PieChartCustomLegend.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Converter\PathToStringConverter.cs" />
     <Compile Include="Views\Converter\TransableComment.cs" />
     <Compile Include="Views\Converter\TryStringToNumberConverter.cs" />
-    <Compile Include="Views\GraphTab.xaml.cs">
+    <Compile Include="GraphComponent\GraphTab.xaml.cs">
       <DependentUpon>GraphTab.xaml</DependentUpon>
     </Compile>
     <Compile Include="EditComponent\ListTab.xaml.cs">
@@ -161,15 +160,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GraphBullets.xaml">
+    <Page Include="GraphComponent\GraphBullets.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\PieChartCustomLegend.xaml">
+    <Page Include="GraphComponent\PieChartCustomLegend.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GraphTab.xaml">
+    <Page Include="GraphComponent\GraphTab.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -246,9 +245,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GraphComponent\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
