--- a/PortFolion/PortFolion/packages.config
+++ b/PortFolion/PortFolion/packages.config
@@ -9,6 +9,6 @@
   <package id="LiveCharts.Wpf" version="0.9.6" targetFramework="net452" />
   <package id="LivetCask" version="1.3.1.0" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
-  <package id="MahApps.Metro.IconPacks.Material" version="1.8.0" targetFramework="net452" />
+  <package id="MahApps.Metro.IconPacks.Material" version="1.8.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Interactive" version="3.1.1" targetFramework="net452" />
 </packages>
