--- a/PortFolion/PortFolion/app.config
+++ b/PortFolion/PortFolion/app.config
@@ -1,3 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="LiveCharts" publicKeyToken="0bc1f845d1ebb8df" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.9.7.0" newVersion="0.9.7.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
