--- a/PortFolion/PortFolionCore/packages.config
+++ b/PortFolion/PortFolionCore/packages.config
@@ -3,4 +3,5 @@
   <package id="CsvHelper" version="6.1.1" targetFramework="net461" />
   <package id="Houzkin" version="1.0.8" targetFramework="net452" />
   <package id="Houzkin.Tree" version="1.0.10" targetFramework="net452" />
+  <package id="System.Interactive" version="3.1.1" targetFramework="net461" />
 </packages>
